--- a/main.html
+++ b/main.html
@@ -4,12 +4,58 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-</head>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+	<script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js">
+	</script>
+	</head>
 
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<div class="container">
+		<div class="alert alert-danger">
+			<h1 class="text-center">Internship Form</h1>
+			<div class="row justify-content-evenly">
+				<div class="col-4">
+					<label for="firstname">First Name</label>
+					<input type="text" id="firstname" class="form-control"required>
+				</div>
+				<div class="col-4">
+					<label for="lastname">Last Name</label>
+					<input type="text" id="lastname" class="form-control"required>
+				</div>
+				<div class="col-4">
+					<label for="email">First Name</label>
+					<input type="email" id="email" class="form-control"required>
+				</div>
+			</div>
+			<div class="row">
+				<div class=col-6>
+					<label for="college">COLLEGE</label>
+					<input type="text" class="form-control" id="college"required>
+				</div>
+				<div class=col-3>
+					<label for="grad">Graduation Year</label>
+					<select class="form-control" id="grad" required>
+						<option value="2022">2022</option>
+						<option value="2023">2023</option>
+					</select>
+				</div>
+				<div class=col-3>
+					<label for="roll">Roll No</label>
+					<input class="form-control" id="roll"required>
+				</div>
+		
+		</div>
+			<input type="checkbox" id="check"required>
+			<label for="check">Agree to terms and conditions</label>
+			<br>
+			<button class="btn btn-primary">Submit Form
+			</button>
+		</form>
+	
+	</div>
 
 </body>
 
